# amf-api-contract/shared/src/main/scala/amf/apicontract/internal/metamodel/domain/api/ApiModel.scala
@@ -13,7 +13,12 @@ import amf.shapes.internal.domain.metamodel.CreativeWorkModel
 
 /** Web Api metamodel
   */
-trait ApiModel extends DomainElementModel with NameFieldSchema with DescribedElementModel with TagsModel with VersionField {
+trait ApiModel
+    extends DomainElementModel
+    with NameFieldSchema
+    with DescribedElementModel
+    with TagsModel
+    with VersionField {
 
   val Servers =
     Field(
@@ -76,6 +81,12 @@ trait ApiModel extends DomainElementModel with NameFieldSchema with DescribedEle
     Array(EndPointModel),
     ApiContract + "endpoint",
     ModelDoc(ModelVocabularies.ApiContract, "endpoint", "End points defined in the API")
+  )
+
+  val Webhooks = Field(
+    Array(EndPointModel),
+    ApiContract + "webhook",
+    ModelDoc(ModelVocabularies.ApiContract, "webhook", "Webhooks defined in the API")
   )
 
   val Security = Field(
