# amf-cli/shared/src/test/resources/upanddown/oas31/oas-petstore-31.json
@@ -9,6 +9,27 @@
     },
     "version": "1.0.11"
   },
+  "webhooks": {
+    "newPet": {
+      "post": {
+        "requestBody": {
+          "description": "Information about a new pet in the system",
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/Pet"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Return a 200 status to indicate that the data was received successfully"
+          }
+        }
+      }
+    }
+  },
   "servers": [
     {
       "url": "https://petstore3.swagger.io/api/v31"
